@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+
+<xsd:schema xmlns="http://www.springframework.org/schema/web"
+			xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+			targetNamespace="http://www.springframework.org/schema/web"
+			elementFormDefault="qualified"
+			attributeFormDefault="unqualified">
+	
+	<xsd:element name="urlmappings">
+		<xsd:complexType>
+			<xsd:sequence>
+				<xsd:element name="urlmapping" type="urlmappingType" minOccurs="1" maxOccurs="unbounded"/>
+				<xsd:element name="interceptor" type="interceptorType" minOccurs="0" maxOccurs="unbounded"/>
+			</xsd:sequence>
+			<xsd:attribute name="alwaysUseFullPath" default="false">
+				<xsd:simpleType>
+					<xsd:restriction base="xsd:string">
+						<xsd:enumeration value="true"/>
+						<xsd:enumeration value="false"/>
+					</xsd:restriction>
+				</xsd:simpleType>
+			</xsd:attribute>
+			<xsd:attribute name="lazyInitHandlers" default="false">
+				<xsd:simpleType>
+					<xsd:restriction base="xsd:string">
+						<xsd:enumeration value="true"/>
+						<xsd:enumeration value="false"/>
+					</xsd:restriction>
+				</xsd:simpleType>
+			</xsd:attribute>
+			<xsd:attribute name="urlDecode" default="false">
+				<xsd:simpleType>
+					<xsd:restriction base="xsd:string">
+						<xsd:enumeration value="true"/>
+						<xsd:enumeration value="false"/>
+					</xsd:restriction>
+				</xsd:simpleType>
+			</xsd:attribute>
+			<xsd:attribute name="order" type="xsd:int"/>
+			<xsd:attribute name="defaultHandler" type="xsd:string">
+			</xsd:attribute>
+		</xsd:complexType>
+		
+	</xsd:element>
+
+	<xsd:complexType name="urlmappingType">
+		<xsd:attribute name="path" use="required" type="xsd:string"/>
+		<xsd:attribute name="ref" use="required" type="xsd:string"/>
+	</xsd:complexType>
+
+	<xsd:complexType name="interceptorType">
+		<xsd:attribute name="ref" use="required" type="xsd:string"/>
+	</xsd:complexType>
+
+</xsd:schema>
